# Spectral-Kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: catboost_baseline.py  sweep_hk.py  tenseed_compare.py
paper/: make_fanova_figure.py  make_interpret_figure.py  make_moons_figure.py  msskm.tex  references.bib
skm/: __init__.py  features.py  gam.py  interpret.py  learned_gam.py  linalg.py  mixture.py  model.py  variational.py
tests/: test_smoke.py
tutorial/: build_tutorial.py  msskm_moons_tutorial.ipynb
