[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skm"
version = "0.0.1"
description = "Multi-Scale Spectral Kernel Machines for tabular data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Agus Sudjianto" },
    { name = "Aijun Zhang" },
]
keywords = [
    "kernel-machine",
    "gaussian-process",
    "spectral-kernel",
    "tabular",
    "machine-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "torch>=2.0",
]

[project.optional-dependencies]
bench = ["catboost>=1.2", "optuna>=3.0", "pandas>=1.5"]
tutorial = ["matplotlib>=3.6", "pandas>=1.5", "nbformat>=5.7", "jupyter>=1.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/asudjianto-xml/Spectral-Kernel"
Repository = "https://github.com/asudjianto-xml/Spectral-Kernel"

[tool.setuptools.packages.find]
include = ["skm*"]
